other-vpol/allowed-base-images/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: allowed-base-images
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: ../allowed-base-images.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: allowed-base-images
          spec:
            validationActions:
             - Deny
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1.yaml
    - apply:
        file: chainsaw-step-02-apply-2.yaml
  - name: step-03
    try:
    - apply:
        file: pod-good.yaml
    - apply:
        file: podcontroller-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Container base image must be approved.')): true
        file: pod-bad.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Container base image must be approved.')): true
        file: podcontroller-bad.yaml
